--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -20,7 +20,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", ".eslintrc.cjs", "**/*.tsx", "**/*.cjs", "**/*.js"],
+  "include": ["src", "###.eslintrc.cjs", "**/*.tsx", "**/*.cjs", "**/*.js"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
