--- a/artisan/artisan-drrr-api/build.gradle
+++ b/artisan/artisan-drrr-api/build.gradle
@@ -1,9 +1,19 @@
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+plugins {
+    id 'java'
 }
 
-tasks.named('test') {
+group = 'artisan'
+version = '0.0.1'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+test {
     useJUnitPlatform()
 }
