--- a/artisan/build.gradle
+++ b/artisan/build.gradle
@@ -14,8 +14,7 @@ allprojects {
 
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        implementation 'org.projectlombok:lombok'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
@@ -34,4 +33,8 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
+
+    dependencies {
+
+    }
 }
