--- a/artisan/artisan-domain/artisan-core-domain/build.gradle
+++ b/artisan/artisan-domain/artisan-core-domain/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    api ('org.springframework.boot:spring-boot-starter-data-jpa')
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
 }
