build: drrr-domain 모듈 추가

--- a/artisan/settings.gradle
+++ b/artisan/settings.gradle
@@ -7,6 +7,6 @@ include 'artisan-api:artisan-api-core'
 include 'artisan-infra'
 include 'artisan-core'
 
-include 'artisan-domain'
 include 'artisan-domain:artisan-core-domain'
+include 'artisan-domain:artisan-drrr-domain'
 
