--- a/artisan/settings.gradle
+++ b/artisan/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name = 'artisan'
 include 'artisan-api'
 include 'artisan-api:artisan-interview-api'
 include 'artisan-api:artisan-drrr-api'
-include 'artisan-api:artisan-api-core'
+include 'artisan-api:artisan-core-api'
 include 'artisan-infra'
 include 'artisan-core'
 
