build: drr-api 의존성을 core-api, drrr-domain에서 가져오도록 구현

--- a/artisan/artisan-api/artisan-drrr-api/build.gradle
+++ b/artisan/artisan-api/artisan-drrr-api/build.gradle
@@ -1,19 +1,4 @@
-plugins {
-    id 'java'
-}
-
-group = 'artisan'
-version = '0.0.1'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+    implementation project(":artisan-api:artisan-core-api")
+    implementation project(":artisan-domain:artisan-drrr-domain")
 }
