build: security 코드 작성

--- a/artisan/artisan-api/artisan-core-api/build.gradle
+++ b/artisan/artisan-api/artisan-core-api/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     implementation project(":artisan-core")
     api project(":artisan-domain:artisan-core-domain")
     api 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.security:spring-security-oauth2-jose:6.2.4'
 }
