build: 전체 모듈에 롬복 추가

--- a/artisan/build.gradle
+++ b/artisan/build.gradle
@@ -15,13 +15,13 @@ allprojects {
 
 
     dependencies {
-        implementation 'org.projectlombok:lombok'
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
     repositories { mavenCentral()}
-    bootJar {enabled = false}
-    jar {enabled = false}
+
 
 
     tasks.named('test') {
@@ -34,7 +34,8 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
-
+    bootJar.enabled = false
+    jar.enabled = true
     dependencies {
 
     }
