build: docs 모듈을 전체에 포함하도록 변경

--- a/artisan/settings.gradle
+++ b/artisan/settings.gradle
@@ -9,4 +9,5 @@ include 'artisan-core'
 
 include 'artisan-domain:artisan-core-domain'
 include 'artisan-domain:artisan-drrr-domain'
+include 'artisan-infra:artisan-docs'
 
