--- a/artisan/artisan-api/artisan-drrr-api/build.gradle
+++ b/artisan/artisan-api/artisan-drrr-api/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    implementation project(":artisan-core")
     implementation project(":artisan-api:artisan-core-api")
     implementation project(":artisan-domain:artisan-drrr-domain")
     implementation project(":artisan-infra:artisan-docs")
