build: 변경된 모듈 사항 적용

--- a/artisan/artisan-domain/artisan-drrr-domain/build.gradle
+++ b/artisan/artisan-domain/artisan-drrr-domain/build.gradle
@@ -1,5 +1,6 @@
 
 dependencies {
-    implementation project(":artisan-core")
+    implementation project(":artisan-core:artisan-core-web")
+    implementation project(":artisan-core:artisan-core-default")
     implementation project(":artisan-domain:artisan-core-domain")
 }
