--- a/artisan/artisan-api/artisan-drrr-api/build.gradle
+++ b/artisan/artisan-api/artisan-drrr-api/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
-    implementation project(":artisan-core")
+    implementation project(":artisan-core:artisan-core-web")
+    implementation project(":artisan-core:artisan-core-default")
     implementation project(":artisan-api:artisan-core-api")
     implementation project(":artisan-domain:artisan-drrr-domain")
     implementation project(":artisan-infra:artisan-docs")
