--- a/artisan/artisan-domain/artisan-core-domain/build.gradle
+++ b/artisan/artisan-domain/artisan-core-domain/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    implementation project (":artisan-core:artisan-core-web")
+    implementation project (":artisan-core:artisan-core-default")
     api ('org.springframework.boot:spring-boot-starter-data-jpa')
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
