--- a/artisan/artisan-api/artisan-drrr-api/build.gradle
+++ b/artisan/artisan-api/artisan-drrr-api/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     implementation project(":artisan-core:artisan-core-web")
     implementation project(":artisan-core:artisan-core-default")
     implementation project(":artisan-api:artisan-core-api")
+
+    implementation project(":artisan-domain:artisan-core-domain")
     implementation project(":artisan-domain:artisan-drrr-domain")
     implementation project(":artisan-infra:artisan-docs")
 }
