--- a/artisan/artisan-domain/artisan-core-domain/src/main/resources/mysql-db.yml
+++ b/artisan/artisan-domain/artisan-core-domain/src/main/resources/mysql-db.yml
@@ -2,6 +2,10 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate.default_batch_fetch_size: 100
+  datasource:
+    url: jdbc:mysql://localhost:3306/project_artisan_test
+    username: root
+    password: password
