--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build", 
+	"build:ignore":"( tsc || true) && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext ts --ext tsx ./src",
     "lint:fix": "eslint --ext ts --ext tsx ./src --fix",
@@ -37,14 +38,16 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@tanstack/react-virtual": "^3.13.0",
     "@types/lodash": "^4.17.15",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.5",
