--- a/artisan/build.gradle
+++ b/artisan/build.gradle
@@ -34,8 +34,8 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
-    bootJar.enabled = false
-    jar.enabled = true
+    bootJar.enabled= true
+    jar.enabled = false
     dependencies {
 
     }
