build: 프로파일 분류 추가

--- a/artisan/artisan-api/artisan-drrr-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/artisan-drrr-api/src/main/resources/application.yml
@@ -1,5 +1,16 @@
+
 spring:
+
   config:
     import:
       - mysql-db.yml
       - api-security.yml
+
+
+  profiles:
+
+    active: local
+    group:
+      local: local
+      local-dev: local-dev
+      prod: prod
