--- a/artisan/artisan-api/artisan-drrr-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/artisan-drrr-api/src/main/resources/application.yml
@@ -5,11 +5,12 @@ spring:
     import:
       - mysql-db.yml
       - api-security.yml
+      - infra-oauth-github.yml
 
 
   profiles:
 
-    active: local
+    active: local-dev
     group:
       local: local
       local-dev: local-dev
