--- a/artisan/build.gradle
+++ b/artisan/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'java'
     // api 의존성 사용을 위해
     id 'java-library'
-    id 'org.springframework.boot' version '3.4.2'
+    id 'org.springframework.boot' version '3.3.2'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -23,8 +23,11 @@ allprojects {
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
-    repositories { mavenCentral()}
-
+    repositories {
+        mavenCentral()
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
+    }
 
 
     tasks.named('test') {
