--- a/artisan/artisan-core/artisan-core-web/build.gradle
+++ b/artisan/artisan-core/artisan-core-web/build.gradle
@@ -1,5 +1,5 @@
 
 dependencies {
     implementation project(":artisan-core:artisan-core-default")
-    implementation "org.springframework.boot:spring-boot-starter-web"
+    api "org.springframework.boot:spring-boot-starter-web"
 }
