--- a/artisan/settings.gradle
+++ b/artisan/settings.gradle
@@ -14,5 +14,7 @@ include 'artisan-domain:artisan-interview-domain'
 include 'artisan-infra:artisan-docs'
 include 'artisan-infra:artisan-external-client'
 include 'artisan-infra:artisan-ai-client'
-findProject(':artisan-infra:artisan-ai-client')?.name = 'artisan-ai-client'
+
+include 'artisan-batch'
+include 'artisan-fluent-crawler'
 
