--- a/artisan/artisan-utils/artisan-fluent-crawler/build.gradle
+++ b/artisan/artisan-utils/artisan-fluent-crawler/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    implementation 'org.apache.commons:commons-pool2:2.12.0'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
+    api 'org.apache.commons:commons-pool2:2.12.0'
+    api 'org.seleniumhq.selenium:selenium-java:4.11.0'
 }
