--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build", 
-	"build:ignore":"( tsc || true) && vite build",
+    "build": "tsc && vite build",
+    "build:ignore": "( tsc || true) && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext ts --ext tsx ./src",
     "lint:fix": "eslint --ext ts --ext tsx ./src --fix",
@@ -26,8 +26,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
@@ -38,17 +40,21 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-virtual": "^3.13.0",
     "@types/lodash": "^4.17.15",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "^9.5.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.15.1",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
@@ -62,8 +68,8 @@
     "@playwright/test": "^1.50.1",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
