build: 모니터링 설정 추가

--- a/artisan/artisan-api/build.gradle
+++ b/artisan/artisan-api/build.gradle
@@ -5,4 +5,5 @@ dependencies {
 
 
     implementation project(":artisan-infra:artisan-docs")
+    implementation project(":artisan-infra:artisan-infra-traffic-hunter")
 }
