--- a/artisan/settings.gradle
+++ b/artisan/settings.gradle
@@ -11,13 +11,14 @@ include 'artisan-core:artisan-core-web'
 
 include 'artisan-domain:artisan-core-domain'
 include 'artisan-domain:artisan-drrr-domain'
+include 'artisan-domain:artisan-drrr-domain:artisan-jooq-drrr-domain'
 include 'artisan-domain:artisan-interview-domain'
 
 include 'artisan-infra:artisan-docs'
 include 'artisan-infra:artisan-external-client'
 include 'artisan-infra:artisan-ai-client'
-
+include 'artisan-infra:artisan-infra-traffic-hunter'
 include 'artisan-batch:artisan-techblog-batch'
 
-include ':artisan-utils:artisan-fluent-crawler'
+include 'artisan-utils:artisan-fluent-crawler'
 
