--- a/artisan/settings.gradle
+++ b/artisan/settings.gradle
@@ -17,6 +17,8 @@ include 'artisan-infra:artisan-docs'
 include 'artisan-infra:artisan-external-client'
 include 'artisan-infra:artisan-ai-client'
 include 'artisan-infra:artisan-infra-traffic-hunter'
+include 'artisan-infra:artisan-s3-client'
+
 include 'artisan-batch:artisan-techblog-batch'
 
 include 'artisan-utils:artisan-fluent-crawler'
