--- a/artisan/artisan-domain/artisan-drrr-domain/build.gradle
+++ b/artisan/artisan-domain/artisan-drrr-domain/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     implementation project(":artisan-core:artisan-core-default")
     implementation project(":artisan-domain:artisan-core-domain")
 
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
