style: yml 파일 인덴트 정리 (#14)
* style: yml 파일 인덴트 정리

* refactor: view 폴더 제거

* refactor: view 폴더 제거

* build: 서브모듈 동기화

* build: api application yml 추가

* build: 키 삭제

* build: 서브 모듈 교체

* build: 서브 모듈 동기화

--- a/artisan/artisan-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/src/main/resources/application.yml
@@ -5,10 +5,12 @@ spring:
       - mysql-db.yml
       - api-security.yml
       - infra-oauth-github.yml
+      - ai-client.yml
+      - traffic-hunter.yml
 
   profiles:
-
     active: local-dev
+
     group:
       local: local
       local-dev: local-dev
