feat: 이미지 응답 처리용도의 JacksonSerializer 추가

--- a/artisan/artisan-api/artisan-drrr-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/artisan-drrr-api/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
       - mysql-db.yml
       - api-security.yml
       - infra-oauth-github.yml
+      - drrr-api.yml
 
   profiles:
 
@@ -13,3 +14,4 @@ spring:
       local: local
       local-dev: local-dev
       prod: prod
+
