--- a/artisan/artisan-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       - infra-oauth-github.yml
       - ai-client.yml
       - traffic-hunter.yml
+      - drrr-api.yml
 
   profiles:
     active: local-dev
