--- a/artisan/artisan-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/src/main/resources/application.yml
@@ -8,11 +8,18 @@ spring:
       - ai-client.yml
       - traffic-hunter.yml
       - drrr-api.yml
+      - api-docs.yml
 
   profiles:
+
     active: local-dev
 
     group:
       local: local
       local-dev: local-dev
       prod: prod
+      stage: stage
+  threads:
+    virtual:
+      enabled: true
+
