--- a/artisan/artisan-domain/artisan-core-domain/build.gradle
+++ b/artisan/artisan-domain/artisan-core-domain/build.gradle
@@ -4,4 +4,10 @@ dependencies {
     api ('org.springframework.boot:spring-boot-starter-data-jpa')
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
+
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
+
+
+    testFixturesImplementation (project(":artisan-core:artisan-core-web"))
+    testFixturesImplementation (project(":artisan-core:artisan-core-default"))
 }
