build: prometheus 설정 추가

--- a/artisan/artisan-infra/artisan-infra-traffic-hunter/src/main/resources/traffic-hunter.yml
+++ b/artisan/artisan-infra/artisan-infra-traffic-hunter/src/main/resources/traffic-hunter.yml
@@ -1,20 +1,5 @@
 management:
   endpoints:
-    jmx:
+    web:
       exposure:
         include: "*"
-
-server:
-  tomcat:
-    mbeanregistry:
-      enabled: true
-
-spring:
-  datasource:
-    hikari:
-      register-mbeans: true
-    tomcat:
-      jmx-enabled: true
-
-  jmx:
-    unique-names: true
