--- a/artisan/artisan-infra/artisan-infra-traffic-hunter/build.gradle
+++ b/artisan/artisan-infra/artisan-infra-traffic-hunter/build.gradle
@@ -1,4 +1,6 @@
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
