--- a/artisan/artisan-api/src/main/resources/application.yml
+++ b/artisan/artisan-api/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 
 spring:
+  application:
+    name: artisan-app
   config:
     import:
+      - optional:aws-secretsmanager:prod/artisan
       - mysql-db.yml
       - api-security.yml
       - infra-oauth-github.yml
@@ -9,17 +12,19 @@ spring:
       - traffic-hunter.yml
       - drrr-api.yml
       - api-docs.yml
+      - discord.yml
 
   profiles:
-
     active: local-dev
-
     group:
       local: local
       local-dev: local-dev
       prod: prod
       stage: stage
+
   threads:
     virtual:
       enabled: true
+
+
 
