--- a/artisan/artisan-infra/artisan-infra-traffic-hunter/src/main/resources/traffic-hunter.yml
+++ b/artisan/artisan-infra/artisan-infra-traffic-hunter/src/main/resources/traffic-hunter.yml
@@ -7,5 +7,6 @@ management:
 
 
 loki:
-  url: ${LOKI_URL}
+  url: http://144.24.83.186:3100/loki/api/v1/push
+#  url: ${LOKI_URL}
   tenant: "default"
