--- a/artisan/artisan-infra/artisan-infra-traffic-hunter/build.gradle
+++ b/artisan/artisan-infra/artisan-infra-traffic-hunter/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
+//    implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
 
 
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
